--- a/scss/blocks/_main.scss
+++ b/scss/blocks/_main.scss
@@ -16,7 +16,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    font-size: 28px;
+    @include mixin.fluid-prop(font-size, 22px, 28px, 991px, 1920px);
     line-height: 34px;
     color: #9d9d9d;
     border-bottom: 1px solid #dcdcdc;
@@ -43,7 +43,7 @@
   }
   &__title {
     margin-bottom: 64px;
-    font-size: 38px;
+    @include mixin.fluid-prop(font-size, 28px, 38px, 991px, 1920px);
     line-height: 46px;
   }
 }
