--- a/scss/blocks/_mainContainer.scss
+++ b/scss/blocks/_mainContainer.scss
@@ -7,6 +7,7 @@ body {
   font-style: normal;
   color: #000000;
   letter-spacing: 0%;
+  overflow: hidden;
 }
 
 .mainContainer {
